--- a/style.css
+++ b/style.css
@@ -205,17 +205,6 @@ h3 {
 	border: none;
 }
 
-.dog-list {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	line-height: 40px;
-	font-weight: 300;
-	font-size: 18px;
-	margin-bottom: 30px;
-	margin-top: 20px;
-}
-
 .img-slide {
 	border-radius: 6px;
 }
@@ -291,7 +280,7 @@ h3 {
 	margin-bottom: 20px;
 }
 
-.tablet:hover, .iphone:hover {
+.tablet img:hover, .iphone img:hover {
     cursor: url('./img/cross.png'), url('./img/cross.png') 5 5, progress;
 }
 
@@ -367,6 +356,16 @@ button:hover {
 	padding: 5vh;
 }
 
+.col-md-8 {
+	font-size: 20px;
+	text-align: left;
+}
+
+.col-md-8 p {
+	text-align: left;
+	padding-bottom: 3vh;
+}
+
 .tablet > div:nth-child(1) > div:nth-child(1) > div:nth-child(3) {
 	text-align: left;
 	padding-top: 3vh;
@@ -384,6 +383,10 @@ div.container:nth-child(3) > div:nth-child(2) > div:nth-child(3) {
 	padding-bottom: 3vh;
 }
 
-.dog {
+.dog p {
 	text-align: left;
+}
+
+.credits p {
+	padding: 1em;
 }
